syntax = "proto3";
package epp.rgp;
option go_package = "github.com/as207960/epp-proxy/gen/go/epp/rgp";

import "fee/fee.proto";
import "common/common.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";

enum RGPState {
    Unknown = 0;
    AddPeriod = 1;
    AutoRenewPeriod = 2;
    RenewPeriod = 3;
    TransferPeriod = 4;
    RedemptionPeriod = 5;
    PendingRestore = 6;
    PendingDelete = 7;
}

message RequestRequest {
    string name = 1;
    google.protobuf.StringValue registry_name = 2;
    fee.DonutsFeeData donuts_fee_agreement = 3;
}

message RestoreReply {
    reserved 5;
    bool pending = 1;
    repeated RGPState state = 2;
    fee.FeeData fee_data = 4;
    string registry_name = 3;
    common.CommandResponse cmd_resp = 6;
}

message ReportRequest {
    string name = 1;
    string pre_data = 2;
    string post_data = 3;
    google.protobuf.Timestamp delete_time = 4;
    google.protobuf.Timestamp restore_time = 5;
    string restore_reason = 6;
    string statement_1 = 7;
    string statement_2 = 8;
    string other_information = 9;
    google.protobuf.StringValue registry_name = 10;
    fee.DonutsFeeData donuts_fee_agreement = 11;
}

message ReportReply {
    bool pending = 1;
    fee.FeeData fee_data = 3;
    string registry_name = 4;
    common.CommandResponse cmd_resp = 5;
}